phase5: implement register and register tests